; ModuleID = '/home/carl/AnghaBench/wrk/src/extr_script.c_script_addr_clone.c'
source_filename = "/home/carl/AnghaBench/wrk/src/extr_script.c_script_addr_clone.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.addrinfo = type { i32 }

@.str = private unnamed_addr constant [9 x i8] c"wrk.addr\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.addrinfo* @script_addr_clone(i32* %0, %struct.addrinfo* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.addrinfo*, align 8
  %5 = alloca %struct.addrinfo*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.addrinfo* %1, %struct.addrinfo** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call %struct.addrinfo* @lua_newuserdata(i32* %6, i32 4)
  store %struct.addrinfo* %7, %struct.addrinfo** %5, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @luaL_getmetatable(i32* %8, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @lua_setmetatable(i32* %10, i32 -2)
  %12 = load %struct.addrinfo*, %struct.addrinfo** %4, align 8
  %13 = load %struct.addrinfo*, %struct.addrinfo** %5, align 8
  %14 = call i32 @script_addr_copy(%struct.addrinfo* %12, %struct.addrinfo* %13)
  %15 = load %struct.addrinfo*, %struct.addrinfo** %5, align 8
  ret %struct.addrinfo* %15
}

declare dso_local %struct.addrinfo* @lua_newuserdata(i32*, i32) #1

declare dso_local i32 @luaL_getmetatable(i32*, i8*) #1

declare dso_local i32 @lua_setmetatable(i32*, i32) #1

declare dso_local i32 @script_addr_copy(%struct.addrinfo*, %struct.addrinfo*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
